# enno-device-sdk

./: CMakeLists.txt  LICENSE.md  README.md
arduino/: README.md
arduino/SiteWhere/: sitewhere-arduino.pb.h  sitewhere-arduino.proto  sitewhere.c  sitewhere.h
arduino/SiteWhere/examples/BasicEvents/: BasicEvents.ino
arduino/SiteWhere/examples/CustomCommands/: CustomCommands.ino  custom.options
arduino/SiteWhere/examples/Gateway/: Gateway.ino
c/: CMakeLists.txt  README.txt  openiot-agent  openiot-agent-cli.c  openiot-agent.sh  openiot-encode.h  openiot-protocol.h
c/amqp/: amqp.c
c/protocolbuffer/: openiot-encode.c  openiot.options  openiot.pb.c  openiot.pb.h  openiot.proto  pb.h  pb_decode.c  pb_decode.h  pb_encode.c  pb_encode.h
c/support/: double_conversion.c  double_conversion.h  getopt.c  getopt.h  misc_defs.h  misc_funcs.inc
csharp/: OpenIoT.csproj  openIoT.sln
csharp/Common/: ILogger.cs  Platform.cs  SafeAction.cs  SafeFunction.cs  SafeLogger.cs  TaskWrapper.cs  TunableLogger.cs
csharp/Gateway/: AMQPSender.cs  AmqpReceiver.cs  Constants.cs  Gateway.cs  IMessageReceiver.cs  IMessageSender.cs  OpenIoTProto.cs  ProtocolBufferEncoder.cs  Test.cs
csharp/Gateway/Properties/: AssemblyInfo.cs
embedded-c/: CMakeLists.txt  README.md
embedded-c/protocol_lib/mqtt/MQTTClient-C/src/: MQTTClient.h
embedded-c/protocol_lib/mqtt/MQTTPacket/src/: MQTTConnectServer.c  MQTTDeserializePublish.c
embedded-c/protocol_lib/mqtt/MQTTPacket/test/: test1.c
embedded-c/samples/simple-pubsub/: CMakeLists.txt  enno_config.h  linux-mqtt-pubsub.sh  pubsub.c
embedded-c/serialization_lib/protobuf/: custom.c  custom.h  raspberrypi.pb.c  raspberrypi.pb.h  sitewhere.c  sitewhere.h  sitewhere.pb.h
embedded-c/src/common/: enno_error.h  enno_log.h
embedded-c/src/protocol/: enno_api.c  enno_api.h
embedded-c/src/protocol/mqtt/: enno_api_mqtt_wrapper.c  enno_mqtt_interface.h  network_interface.h  timer_interface.h
embedded-c/src/protocol/mqtt/platform_linux/: network_linux.c  network_linux.h  timer_linux.c  timer_linux.h
mbed-LPC1768/: README.md  ennoForMbed.cpp  enno_config.h  main.cpp
mbed-LPC1768/MQTT/: MQTTEthernet.h
mbed-LPC1768/MQTT/MQTTPacket/.hg/: dirstate  thgstatus
mbed-LPC1768/common/: enno_error.h  enno_log.h
mbed-LPC1768/protocol/: CplusplusToC.cpp  enno_api.c  enno_api.h  enno_api_mqtt_wrapper.c
mbed-LPC1768/serialization_lib/: pb_decode.h
mbed-LPC1768/serialzation_lib/: pb_encode.h  sitewhere.c  sitewhere.h  sitewhere.pb.c
nodejs/: send.js
